--- a/K_league_info/app/src/main/res/layout/activity_main.xml
+++ b/K_league_info/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:paddingTop="?attr/actionBarSize">
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -101,37 +124,9 @@
                 android:text="K League Ranking"
                 android:textSize="50dp" />
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="50dp">
 
-                <Button
-                    android:id="@+id/score"
-                    android:layout_width="140dp"
-                    android:layout_height="60dp"
-                    android:layout_alignParentLeft="true"
-                    android:text="SCORE" />
-
-                <Button
-                    android:id="@+id/team"
-                    android:layout_width="140dp"
-                    android:layout_height="60dp"
-                    android:layout_centerInParent="true"
-                    android:text="Team" />
-
-                <Button
-                    android:id="@+id/community"
-                    android:layout_width="140dp"
-                    android:layout_height="60dp"
-                    android:layout_alignParentRight="true"
-                    android:text="Community" />
-            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
 
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
