--- a/K_league_info/app/src/main/res/layout/gangwon_screen.xml
+++ b/K_league_info/app/src/main/res/layout/gangwon_screen.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,7 +48,7 @@
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Button" />
+                    android:text="뒤로가기" />
 
                 <TextView
                     android:id="@+id/team_text"
@@ -136,10 +160,9 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/imageView2"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
-                        android:layout_margin="10dp"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/gk_lee" />
 
@@ -186,36 +209,7 @@
                 </LinearLayout>
             </HorizontalScrollView>
 
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/score"
-                    android:layout_width="120dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:text="SCORE" />
-
-                <Button
-                    android:id="@+id/team"
-                    android:layout_width="120dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:text="Team" />
-
-                <Button
-                    android:id="@+id/community"
-                    android:layout_width="120dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:text="Community" />
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
