--- a/K_league_info/app/src/main/res/layout/team_screen.xml
+++ b/K_league_info/app/src/main/res/layout/team_screen.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -76,35 +99,7 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/jejuunited" />
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/score"
-                    android:layout_width="120dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:text="SCORE" />
-
-                <Button
-                    android:id="@+id/team"
-                    android:layout_width="120dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:text="Team" />
-
-                <Button
-                    android:id="@+id/community"
-                    android:layout_width="120dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:text="Community" />
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
