중간저장,  이미지버튼 클릭시 이벤트 발생

--- a/K_league_info/app/src/main/res/layout/team_screen.xml
+++ b/K_league_info/app/src/main/res/layout/team_screen.xml
@@ -6,14 +6,15 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="675dp"
         android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
     <fragment
@@ -21,6 +22,7 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="bottom"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -29,6 +31,7 @@
         app:navGraph="@navigation/mobile_navigation" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -43,14 +46,14 @@
                 android:layout_margin="10dp"
                 android:orientation="horizontal">
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/seoul_fc"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/seoul" />
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/jeonbuk"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
@@ -64,14 +67,14 @@
                 android:layout_margin="10dp"
                 android:orientation="horizontal">
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/seongnam"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/seongnam" />
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/gangwon"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
@@ -85,20 +88,85 @@
                 android:layout_margin="10dp"
                 android:orientation="horizontal">
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/daegu"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/daegu" />
 
-                <ImageView
-                    android:id="@+id/jeju"
+                <ImageButton
+                    android:id="@+id/busan"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/jejuunited" />
+                    app:srcCompat="@drawable/busan" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/ulsan"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ulsan" />
+
+                <ImageButton
+                    android:id="@+id/suwon"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/suwon_bluewings" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/incheon"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/incheon" />
+
+                <ImageButton
+                    android:id="@+id/gwangju"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/gwangju" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/pohang"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/pohang" />
+
+                <ImageButton
+                    android:id="@+id/sangju"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/sangju" />
+            </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
 
