--- a/K_league_info/app/src/main/res/layout/teamdetail_screen.xml
+++ b/K_league_info/app/src/main/res/layout/teamdetail_screen.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -64,14 +63,14 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/gangwon_teamdetail_screen"
+                    android:id="@+id/team_logo"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/gangwon" />
 
                 <TextView
-                    android:id="@+id/team_name_gangwon"
+                    android:id="@+id/team_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -79,7 +78,28 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/gangwon_fw"
+                android:id="@+id/team_manager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="FW" />
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <ImageButton
+                    android:id="@+id/imageView"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/gk_lee" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/team_fw"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="FW" />
@@ -93,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent">
 
-                    <ImageView
+                    <ImageButton
                         android:id="@+id/imageView"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
@@ -101,7 +121,7 @@
                         android:layout_weight="1"
                         app:srcCompat="@drawable/gk_lee" />
 
-                    <ImageView
+                    <ImageButton
                         android:id="@+id/imageView"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
@@ -112,7 +132,7 @@
             </HorizontalScrollView>
 
             <TextView
-                android:id="@+id/gangwon_mf"
+                android:id="@+id/team_mf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="MF" />
@@ -145,7 +165,7 @@
             </HorizontalScrollView>
 
             <TextView
-                android:id="@+id/gangwon_df"
+                android:id="@+id/team_df"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="DF" />
@@ -177,7 +197,7 @@
             </HorizontalScrollView>
 
             <TextView
-                android:id="@+id/gangwon_gl"
+                android:id="@+id/team_gk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="GL" />
