--- a/K_league_info/app/src/main/res/layout/team_screen.xml
+++ b/K_league_info/app/src/main/res/layout/team_screen.xml
@@ -62,7 +62,7 @@
                     app:srcCompat="@drawable/busan" />
 
                 <ImageButton
-                    android:id="@+id/gyeongnamImagebutton"
+                    android:id="@+id/gwangjuImagebutton"
                     android:scaleType="fitCenter"
                     android:layout_width="0dp"
                     android:layout_height="120dp"
@@ -149,13 +149,13 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/seongnamImagebutton"
+                    android:id="@+id/seoulImagebutton"
                     android:layout_width="0dp"
                     android:layout_height="120dp"
                     android:layout_weight="1"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/incheon"
-                    tools:srcCompat="@drawable/seongnam" />
+                    tools:srcCompat="@drawable/seoul" />
 
                 <ImageButton
                     android:id="@+id/suwonImagebutton"
